@@ -44,22 +44,28 @@ html {
 
 .np-slider {
     color:#346dd2;
-    background-color: rgba(255, 255, 255, 0.15) !important;
-    border-top: 2px solid #262626 !important;
-    border-bottom: 2px solid #262626 !important;
+    background-color:#444;
+    border-top: 2px solid #212121 !important;
+    border-bottom: 2px solid #212121 !important;
 }
 
 .np-slider-mobile {
     color:#346dd2;
-    background-color: rgba(255, 255, 255, 0.15) !important;
+    background-color: rgba(0, 0, 0, 0.15) !important;
 }
 
 progress::-webkit-progress-bar {
-    background-color:#333;
+    background-color:#444;
 }
+
+.np-slider-mobile::-webkit-progress-bar {
+    background-color: rgba(0, 0, 0, 0.15) !important;
+}
+
 progress::-webkit-progress-value {
     background-color:#346dd2;
 }
+
 progress::-moz-progress-bar {
     background-color:#346dd2;
 }
