@@ -39,22 +39,28 @@ html {
 
 .np-slider {
     color:#346dd2;
-    background-color: rgba(0, 0, 0, 0.15) !important;
+    background-color: #ccc;
     border-top: 2px solid #f5f5f5 !important;
     border-bottom: 2px solid #f5f5f5 !important;
 }
 
 .np-slider-mobile {
     color:#346dd2;
-    background-color: rgba(0, 0, 0, 0.15) !important;
+    background-color: rgba(0, 0, 0, 0.1) !important;
 }
 
 progress::-webkit-progress-bar {
-    background-color:#ddd;
+    background-color: #ccc;
 }
+
+.np-slider-mobile::-webkit-progress-bar {
+    background-color: rgba(0, 0, 0, 0.1) !important;
+}
+
 progress::-webkit-progress-value {
     background-color:#346dd2;
 }
+
 progress::-moz-progress-bar {
     background-color:#346dd2;
 }
