@@ -4,6 +4,7 @@
 2. When updating steam meta-data for current queue item, use its "playlist
    index" to update correct item.
 3. Only show duration if greater than 0.
+4. Only use semi-transparent time progress for mobile and large desktop views.
 
 0.2.7
 -----
